# a-stock-evidence-radar

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  radar_daily.yml
config/: app.yaml  sector_taxonomy.yaml  sources.yaml  thresholds.yaml
data/history/: live_etf_history.csv  live_market_history.csv  mock_etf_history.csv  mock_margin_detail_history.csv  mock_margin_history.csv  mock_market_history.csv
data/raw/2026-07-17/: etf.csv  margin.csv  margin_detail.csv  market.csv
docs/: DESIGN_V3.md  M1_IMPLEMENTATION_STATUS.md
metadata/: security_sector_map.csv
reports/daily/: 2026-07-20_confirmed.md  2026-07-20_demo.md  2026-07-20_preliminary.md  2026-07-21_confirmed.md  2026-07-21_preliminary.md  2026-07-22_confirmed.md  2026-07-22_preliminary.md  2026-07-23_confirmed.md  2026-07-23_preliminary.md
reports/latest/: latest.json  latest.md
site/: index.html  report.md
site/api/v3/: glossary.json  latest.json  market-state.json  sector-states.json  source-quality.json
src/a_stock_evidence_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/a_stock_radar/: __init__.py  cli.py  config.py  features.py  guardrails.py  models.py  pipeline.py  reporting.py  sources.py  states.py  storage.py  taxonomy.py
src/a_stock_radar/templates/: index.html.j2  report.md.j2
tests/: test_features.py  test_pipeline.py  test_taxonomy.py
