[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-stock-evidence-radar"
version = "0.1.0"
description = "A-share market ETF and margin evidence radar M1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare==1.18.64",
  "jinja2>=3.1,<4",
  "numpy>=2.0,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "pydantic>=2.10,<3",
  "PyYAML>=6,<7",
  "requests>=2.32,<3"
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.11,<1"]

[project.scripts]
a-stock-radar = "a_stock_radar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
a_stock_radar = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
